# lecture-analyzer2

./: Cargo.toml  doc.md
output/static/: index.html  script.js  style.css
src/: analyze.rs  export.rs  main.rs  pdf.rs  utils.rs
static/: index.html  script.js
