[package]
name = "lecture-analyzer2"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
pdf-extract = "0.6"           
lopdf = "0.31"               
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.10.1"
which = "6.0.1"
regex = "1.10.4"                
lazy_static = "1.4.0"           
stopwords = "0.1.1"            
petgraph = "0.6"              
printpdf = "0.4.1"              
reqwest = { version = "0.12.4", features = ["blocking", "json"] } 
scraper = "0.19"             
anyhow = "1.0.86"                
thiserror = "1.0"            
log = "0.4"
env_logger = "0.11"
rusttype = "0.9"
fancy-regex="0.15.0"
textwrap= "0.16"