[package]
name = "lecture-analyzer2"
version = "0.1.0"
edition = "2024"

[dependencies]
console = { version = "0.16", features = ["std"] }
clap = { version = "4.5.48", features = ["derive"] }
pdf-extract = "0.6"           
lopdf = "0.31"               
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.22.0"
which = "6.0.3"
regex = "1.11.2"                
lazy_static = "1.5.0"           
stopwords = "0.1.1"            
petgraph = "0.6"              
printpdf = "0.4.1"              
reqwest = { version = "0.12.23", features = ["blocking", "json"] } 
scraper = "0.19"             
anyhow = "1.0.100"                
thiserror = "1.0"            
log = "0.4"
env_logger = "0.11"
rusttype = "0.9"
fancy-regex="0.15.0"
textwrap= "0.16"
rust-bert="0.23.0"
tch="0.17.0"
axum={ version = "0.6.20", features = ["multipart"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.3.5", features = ["fs"] }
once_cell = "1.21.3"
